# kwconf

./: .gitignore  .gitlab-ci.yml  .readthedocs.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.rst  pyproject.toml  run_doctests.sh  run_linter.sh  run_tests.py  setup.py
.github/workflows/: release.yml  tests.yml
dev/journals/: claude.md
dev/planning/: design.md
dev/poc/: FINDINGS.md
dev/poc/poc_auto_parser/: auto_parser.py
dev/poc/poc_typing/: check_current_gap.py  check_proposed_fail.py  check_proposed_pass.py  gpt_recipe.py  mwe.py  probe_defaults.py  probe_explicit_init.py  probe_single.py  probe_transform_forms.py  recipe_recommended.py  value_current.py  value_proposed.py  value_proposed_base.py
docs/source/: conf.py  index.rst
docs/source/auto/: kwconf.rst  modules.rst
docs/source/manual/: ADRs.md  coercion_and_cli.rst  core_contract.rst  migration_from_scriptconfig.md  modal_cli.rst  nested_configs.rst
docs/source/tutorial/: quickstart.rst
examples/: 00_jons_example.py  01_minimal_config.py  02_cli_surface.py  03_config_files.py  04_nested_configs.py  05_modal_cli.py  06_large_scale_app.py  07_decorator_and_dynamic.py  08_modal_default_precedence_mwe.py  README.md  _bootstrap.py  run_all.py
examples/data/: large_train.yaml  report.yaml
kwconf/: __init__.py  __main__.py  _ubelt_repr_extension.py  annotations.py  argparse_ext.py  cli.py  coerce.py  config.py  dataconfig.py  diagnostics.py  dict_like.py  file_like.py  modal.py  smartcast.py  subconfig.py  value.py
kwconf/_cli/: __init__.py  main.py  template.py
kwconf/util/: util_class.py  util_exception.py  util_fileio.py  util_misc.py  util_repr.py  util_text.py  util_yaml.py
requirements/: optional.txt  runtime.txt  tests.txt  ubelt.txt  yaml.txt
requirements/locks/: tests-optional.txt  tests.txt
tests/: test_aliases.py  test_annotation_aware_parsers.py  test_annotations.py  test_annotations_module.py  test_argparse_ext_standalone.py  test_argparse_integration.py  test_argparse_roundtrip.py  test_class_attrs.py  test_cli.py  test_coerce.py  test_config_normalization.py  test_counter_flags.py  test_data_versus_default.py  test_dataconfig.py  test_default_factory.py  test_default_wysiwyg.py  test_docs_corner_cases.py  test_explicit_argv_keys.py  test_file_config_load.py  test_import.py  test_ingestion.py  test_inheritence.py  test_lists.py  test_modal.py  test_nargs_parser_combos.py  test_newattr.py  test_paths.py  test_port_primatives.py  test_post_init.py  test_smartcast_issues.py  test_special_options.py  test_subconfig_behavior.py  test_validation.py  test_vendored_util_parity.py  test_yaml_type.py
